--- a/front/package.json
+++ b/front/package.json
@@ -10,10 +10,16 @@
   "dependencies": {
     "axios": "^1.2.1",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.1",
+    "localforage": "^1.10.0",
+    "moment": "^2.29.4",
+    "pouchdb-utils": "^8.0.0",
     "vue": "^3.2.13",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.1.6",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "vuex-persist": "^3.1.3",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
